# vinted-os

./: .env.example  .gitignore  README.md  agent.py  configure.py  demo_db.db  etl_pipeline.py  pyproject.toml  reacttest.ipynb  setup.py
config/: settings.yaml
data/: .file_hashes.pkl
data/bm25_indexes/: md_bm25_index.pkl
data/conversations/: cli_session.json
data/demo_knowledge_base/: architecture_map.md  specs_constraints.md  troubleshooting_guide.md
data/qdrant_data/: meta.json
data/qdrant_data/collection/log_chunks/: storage.sqlite
data/qdrant_data/collection/md_chunks/: storage.sqlite
demos/: demo_rag_showcase.ipynb  reacttest_old.ipynb.bak
docs/: AGENT_DEMO_SUMMARY.md  DEMO_MODE.md  QUICKSTART_DEMO.md  README_old.md.bak
install/: README.md  environment.yml  requirements.txt
scripts/: gmailquickstart.py
src/: __init__.py  config_loader.py  logging_config.py  main.py  models.py
src/agent/core/: llm_client.py  memory.py  react_loop.py  router.py
src/agent/indexing/: file_tracker.py  graph.py  loaders.py  state.py
src/agent/indexing/nodes/: __init__.py  embedder.py  kb_preprocessing.py  log_cleaner.py
src/agent/retrieval/: bm25_index.py  embeddings.py  hybrid_retriever.py  vector_store.py
src/agent/tools/: __init__.py  formatters.py  query_tools.py  schemas.py  sql_validator.py
src/docuflow/: __init__.py  generator.py  parser.py  vision.py
src/services/: __init__.py  database.py  gmail.py  printer.py  query_service.py
tests/: README.md  check_demo_schema.py  init_demo_db.py  inspect_metadata.py  test_agent_orchestrator.py  test_bm25.py  test_embedder.py  test_embeddings.py  test_function_calling_tools.py  test_hybrid_retrieval.py  test_incremental_updates.py  test_indexing_pipeline.py  test_vector_store.py  verify_demo.py
tests/test_bm25_data/: md_bm25_index.pkl
